<resources>
    <string name="app_name">NeuroSMG</string>
    <string name="hello_user">Добро пожаловать в NeuroSMG!</string>
    <string name="welcome_user">Добро пожаловать!</string>
    <string name="info_about_app">Наше приложение помогает алкозависимым людям...</string>
    <string name="go_to_testing_button">Перейти к тестированию</string>
    <string name="login_text_info">Для того, чтобы воспользоваться приложением войдите в аккаунт.</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="button_enter">Войти</string>
    <string name="title_main">Главная</string>
    <string name="button_start">Начать</string>
    <string name="button_stop">Cтоп</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="lbl_title_main">Главная</string>
    <string name="title_doctor_profile">Профиль врача</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="list_of_patients">Список пациентов</string>
    <string name="tests">Тесты</string>
    <string name="questionnaires">Опросники</string>
    <string name="patients">Пациенты</string>
    <string name="archive">Архив</string>
    <string name="about_program">О программе</string>

    <string name="fot_test">FOT</string>
    <string name="fot_test_subtitle">Finger oscillation test</string>
    <string name="rat_test">RAT</string>
    <string name="rat_test_subtitle">Risk appetite test</string>
    <string name="iat_test">IAT</string>
    <string name="iat_test_subtitle">Implicit association test</string>
    <string name="gng_test">GNG</string>
    <string name="gng_test_subtitle">Go/No go test</string>
    <string name="sct_test">SCT</string>
    <string name="sct_test_subtitle">Stroop color test</string>
    <string name="tmt_test">TMT</string>
    <string name="tmt_test_subtitle">Trail making test</string>
    <string name="cbt_test">CBT</string>
    <string name="cbt_test_subtitle">Corsi block test</string>
    <string name="mrt_test">MRT</string>
    <string name="mrt_test_subtitle">Mental rotation task</string>

    <string name="info_about_patient">Информация о пациенте</string>
    <string name="profile_of_patient">Профиль пациента</string>

    <string name="program_version">NeuroSMG ver 1.004</string>
    <string name="about_program_text1">Настоящее приложение выполнено при содействии сотрудников:</string>
    <string name="about_program_text2">Кафедры психиатрии и наркологии с курсом ФПК и ПК.</string>
    <string name="about_program_text3">Кафедры общей и клинической биохимии ФПК и ПК.</string>
    <string name="next_btn">Далее</string>
    <string name="patient_date_of_birthd">Дата рождения</string>
    <string name="dialog_fail_add_patient">Пациент не создан! Попробуйте еще раз!</string>
    <string name="dialog_ok">Окей</string>

    //загрузка файла
    <string name="dialog_test_success_title">Тестирование пройдено</string>
    <string name="dialog_test_success_subtitle">Данные будут сохранены в папке</string>

    //Диалоговое окно startTest CBT
    <string name="cbt_dialog_title">Начало</string>
    <string name="cbt_dialog_message">Перед началом тестирования нажмите на кнопку старт.</string>
    <string name="cbt_dialog_message_start">"Для начала тестирования нажмите кнопку Начать"</string>
    <string name="dialog_btn_ok">окей</string>

    //Диалоговое окно инструкции CBT
    <string name="cbt_dialog_inst_title">Инструкция</string>
    <string name="cbt_dialog_inst_sumtitle">Длина последовательности - 3</string>


    //errors
    <string name="not_success_save_file">Извините, не удалось сохранить данные</string>

    //интернет подключение
    <string name="internet_connection_title_success">Интернет подключен</string>
    <string name="internet_connection_subtitle_success">Отлично, вы успешно подключены к интернету.</string>

    <string name="internet_connection_title_error">Отсутствует подключение</string>
    <string name="internet_connection_subtitle_error">Пожалуйста, проверьте ваше интернет-соединение и попробуйте снова.</string>

    //GNG
    <string name="gng_dialog_title">Инструкция</string>
    <string name="gng_dialog_title_start">Инструкция</string>
    <string name="gng_dialog_title_success">"Тестирование пройдено!"</string>
    <string name="gng_dialog_subtitle_start">"Для начала тестирования нажмите кнопку Начать"</string>


    <string name="gng_dialog_message">Перед вами находятся 4 квадрата, в каждом из которых может появиться или крестик, или плюсик. Как только вы увидите крестик в одном из квадратов, нажмите на кнопку с крестиком ниже. Если появляется плюсик  — нажимать ничего не нужно.</string>
    <string name="gng_dialog_save">Данные будут сохранены в папку</string>

    //SCT
    <string name="color_red">Красный</string>
    <string name="color_red_en">red</string>
    <string name="color_blue">Синий</string>
    <string name="left_side">left</string>
    <string name="right_side">right</string>
    <string name="color_blue_en">blue</string>
    <string name="sct_dialog_title_start">Исследование начато</string>
    <string name="sct_dialog_title">Начало</string>
    <string name="sct_dialog_subtitle_start">Приготовьтесь</string>
    <string name="sct_dialog_subtitle">Для начала тестирования коснитесь экрана</string>
    <string name="sct_dialog_message">Перед вами на экране будет представлен шар определенного цвета, который при касании экрана увеличивается в размере. По прошествии определенного количества касаний шар лопается. Каждое касание приносит</string>
    <string name="sct_dialog_save">Данные будут сохранены в папку</string>

    //FOT
    <string name="fot_dialog_title">Начало</string>
    <string name="fot_dialog_title_warning">Предупреждение</string>
    <string name="fot_dialog_title_end_time">Время вышло</string>
    <string name="fot_dialog_subtitle_warning">Перед началом теста нажмите кнопку начать</string>
    <string name="fot_dialog_subtitle">Для начала тестирования коснитесь экрана</string>
    <string name="fot_dialog_subtitle_left_hand">Продолжите исследование для левой руки</string>
    <string name="dialog_tmt_subtitle_rules">Проложите путь от начала лабиринта до конца, стараясь избегать ударения о стены</string>

    //TMT
    <string name="dialog_title_done_test">Тестирование пройдено</string>
    <string name="dialog_subtitle_done_test">Тестирование пройдено</string>

    //IAT
    <string name="dialog_iat_subtitle">Сделайте выбор между напитками и алкоголем. Отнесите товар к определенной категории.</string>

    //AIT2
    //COMMON
    <string name="dialog_title_rules">Правила тестирования</string>
    <string name="stage_by_step">Этап %s</string>
    <string name="dialog_title_test_done_title">Тестирование пройдено</string>
    <string name="dialog_title_test_done_subtitle">Данные будут сохранены в папку</string>
</resources>